# the-wealth-core

./: .dockerignore  .env.example  .gitignore  README.md  TODO.md  appmap.yml  docker-compose.infra.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  setup_deriv.sh  setup_local.sh
src/docs/: API-MAPPING.md  deriv-api.md  deriv-server-api.md  infrastructure.md  local-development.md  market-service.md  redis-usage.md  testing-and-debugging.md
src/infrastructure/nats/: nats-server.conf
src/infrastructure/postgres/init/: 001_app_schema.sql
src/infrastructure/scripts/: check_connectivity.sh  check_nats_pubsub.py  fetch_deriv_active_symbols.py  start_containers.sh  stop_containers.sh  test_redis_connection.py
src/infrastructure/timescaledb/init/: 001_init.sh  001_market_schema.sql  003_market_schema.sql
src/services/: Dockerfile
src/services/analytics-service/: main.py
src/services/execution-service/: main.py
src/services/gateway/: envelope.py  main.py  state.py  strategy_registry.py
src/services/gateway/providers/: base.py  mock.py  timescale_market.py
src/services/gateway/routes/: account.py  journal.py  logs.py  (+6 more)
src/services/market-service/: config.py  deriv_connector.py  fallback_provider.py  main.py  models.py  normalization.py  pipeline.py  timescale_writer.py
src/services/strategy-service/: main.py
src/shared/: __init__.py  nats_client.py  redis_client.py  service.py
src/shared/events/: __init__.py  base.py  market.py  order.py  position.py  signal.py  system.py
src/tests/: test_event_contracts.py  test_market_normalization.py
