[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "the-wealth-core"
version = "0.1.0"
description = "Distributed event-driven trading system backbone"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N", "B"]

[tool.ruff.lint.per-file-ignores]
"src/tests/*" = ["D"]
"src/services/gateway/routes/*" = ["B008", "N815"]
"src/services/gateway/providers/mock.py" = ["E501"]
"src/services/gateway/routes/stream.py" = ["E501", "N815"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true
no_implicit_optional = true
disallow_untyped_defs = false
files = ["src/shared/", "src/tests/"]
exclude = [
    "src/services/",
]
